tests/interpreter_directive/interpreter_directive.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast `1` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:3:1
   3| 1 as string; // error
      ^ [1]

References:
   test.js:3:6
   3| 1 as string; // error
           ^^^^^^ [2]



Found 1 error
